# file-organizer

./: Cargo.toml  README.md
src/: main.rs
